--- a/styles.css
+++ b/styles.css
@@ -62,16 +62,23 @@ body {
     text-decoration: none;
     padding: 13px 25px;
     border-radius: 1000px;
-    transition: background-color .3s ease-out, border-color .3s ease-out;
+    transition: background-color 0.3s ease-out, border 0.3s ease-out,
+        color 0.3s ease-out;
 }
 
 .our-btn:hover {
-    background-color: #d660ff;
-    border: 2px solid #d660ff;
+    background-color: #2e40e2;
+    border: 2px solid #2e40e2;
 }
 
 .our-btn--outline {
     background-color: transparent;
+    border: 2px solid white;
+}
+
+.our-btn--outline:hover {
+    background-color: white;
+    color: #475aff;
     border: 2px solid white;
 }
 
@@ -163,6 +170,17 @@ body {
     font-family: "Source Sans 3", sans-serif;
     font-size: 1.15rem;
     color: #9f9f9f;
+    cursor: pointer;
+}
+
+.pet-filter button:hover {
+    color: #7d7d7d;
+}
+
+.pet-filter .active,
+.pet-filter .active:hover {
+    color: #475aff;
+    text-decoration: underline;
 }
 
 .site-footer p {
@@ -175,7 +193,7 @@ body {
 
 .list-of-pets {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(340, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(390px, 1fr));
     column-gap: 34px;
     row-gap: 16px;
 }
@@ -183,7 +201,7 @@ body {
 .pet-card {
     overflow: hidden;
     display: grid;
-    grid-template-columns: 120px 1fr;
+    grid-template-columns: 165px 1fr;
     border-radius: 20px;
     border: 1px solid #f3f3f3;
     box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.08);
@@ -212,7 +230,7 @@ body {
 }
 
 .pet-description {
-    font-size: .9rem;
+    font-size: 0.9rem;
     margin: 0 0 1rem 0;
     color: #626262;
     line-height: 150%;
@@ -240,7 +258,7 @@ body {
     .pet-filter {
         font-size: 1.375rem;
     }
-    
+
     .pet-filter button {
         font-size: 1.375rem;
     }
